--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "url": "git+https://github.com/indiataylor1/book-nook.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "India,Veera,Joseph,Sakariya",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/indiataylor1/book-nook/issues"
