--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "password": "qb6cpt85na95pt3h",
     "database": "qkq4xi4d1fah02yh",
     "host": "ohunm00fjsjs1uzy.cbetxkdyhwsb.us-east-1.rds.amazonaws.com",
-    "dialect": "mysql2"
+    "dialect": ""
   },
   "name": "book-nook",
   "version": "1.0.0",
